--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.27",
+    "react-ticker": "^1.2.2",
     "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
